Adicionando logs e sonarlint
