# src/main/java/br/com/jonathanoliveira/currencyconverter/controllers/CurrencyConverterController.java
@@ -20,18 +20,21 @@ import br.com.jonathanoliveira.currencyconverter.data.vos.TransactionRequestVO;
 import br.com.jonathanoliveira.currencyconverter.data.vos.TransactionResponseVO;
 import br.com.jonathanoliveira.currencyconverter.facades.CurrencyConverterFacade;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 @RestController
 @RequestMapping(path = "/currency-converter")
 @RequiredArgsConstructor
+@Slf4j
 public class CurrencyConverterController {
 	private final CurrencyConverterFacade currencyConverterFacade;
 
 	@PostMapping(consumes = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<TransactionResponseVO> convertCurrency(@RequestParam(value = "accessKey", required = true) String accesskey,
+	public ResponseEntity<TransactionResponseVO> convertCurrency(
 			@Valid @RequestBody TransactionRequestVO transactionRequestVO) {
-		TransactionResponseVO transactionResponseVO = this.currencyConverterFacade.convertCurrency(accesskey,
-				transactionRequestVO);
+		log.info("HttpMethod Post /currency-converter");
+		TransactionResponseVO transactionResponseVO = this.currencyConverterFacade
+				.convertCurrency(transactionRequestVO);
 		return new ResponseEntity<>(transactionResponseVO, HttpStatus.CREATED);
 	}
 
@@ -39,6 +42,7 @@ public class CurrencyConverterController {
 	public ResponseEntity<List<TransactionResponseVO>> findAll(
 			@RequestParam(value = "page", defaultValue = "0") int page,
 			@RequestParam(value = "size", defaultValue = "10") int size) {
+		log.info("HttpMethod Get /currency-converter");
 		Pageable pageable = PageRequest.of(page, size);
 		List<TransactionResponseVO> transactionResponseVOList = this.currencyConverterFacade.findAll(pageable);
 		return ResponseEntity.ok(transactionResponseVOList);
