# src/main/java/br/com/jonathanoliveira/currencyconverter/data/vos/TransactionRequestVO.java
@@ -1,5 +1,6 @@
 package br.com.jonathanoliveira.currencyconverter.data.vos;
 
+import javax.validation.constraints.NotEmpty;
 import javax.validation.constraints.NotNull;
 
 import br.com.jonathanoliveira.currencyconverter.data.enums.CurrencyEnum;
@@ -9,6 +10,10 @@ import lombok.Setter;
 @Getter
 @Setter
 public class TransactionRequestVO {
+
+	@NotNull
+	@NotEmpty
+	private String accessKey;
 
 	@NotNull
 	private Integer userId;
